polished docs and tested notebooks

--- a/diagnostics/radiation/notebooks/gregory.ipynb
+++ b/diagnostics/radiation/notebooks/gregory.ipynb
@@ -80,7 +80,23 @@
    "execution_count": 5,
    "id": "51a6d189-4360-4f4c-86d5-c90d84156a56",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/b/b382257/.conda/envs/aqua/lib/python3.10/site-packages/xarray/core/indexing.py:1443: PerformanceWarning: Slicing is producing a large chunk. To accept the large\n",
+      "chunk and silence this warning, set the option\n",
+      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': False}):\n",
+      "    ...     array[indexer]\n",
+      "\n",
+      "To avoid creating the large chunks, set the option\n",
+      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': True}):\n",
+      "    ...     array[indexer]\n",
+      "  return self.array[key]\n"
+     ]
+    }
+   ],
    "source": [
     "TOA_icon_gm, reader_icon, data_icon, TOA_icon, TOA_icon_r360x180 = radiation_diag.process_model_data(model =  'ICON' , exp = 'ngc3028' , source = 'lra-r100-monthly')"
    ]
@@ -118,7 +134,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-06 15:56:22 :: Reader :: WARNING  -> lat is sorted in different way between area files and your dataset. Flipping it!\n"
+      "2023-07-10 16:21:03 :: Reader :: WARNING  -> lat is sorted in different way between area files and your dataset. Flipping it!\n"
      ]
     },
     {
@@ -157,7 +173,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-06 15:56:42 :: Reader :: WARNING  -> lat is sorted in different way between area files and your dataset. Flipping it!\n"
+      "2023-07-10 16:21:34 :: Reader :: WARNING  -> lat is sorted in different way between area files and your dataset. Flipping it!\n"
      ]
     },
     {
