First Release finished

--- a/diagnostics/ocean_circulation/notebooks/ocean_circulation.ipynb
+++ b/diagnostics/ocean_circulation/notebooks/ocean_circulation.ipynb
@@ -59,6 +59,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -124,9 +125,10 @@
    "metadata": {},
    "source": [
     "## Functions:\n",
-    "    There are several functions in ocean_circulation_func\n",
+    "    All functions (primary and secondary) can be found in ocean_circulation_func\n",
     "\n",
-    "    The two main diagnostics functions are:\n",
+    "    The two primary diagnostic functions are:\n",
+    "\n",
     "### 1. plot_stratification\n",
     "plot_stratification(mod_data, region=None, time = None, latS:   float=None, latN: float=None, lonW: float=None,lonE: float=None, output= bool, output_dir=\"./figs\")\n",
     "\n",
@@ -139,9 +141,10 @@
     "     \n",
     "\n",
     "### 2. #plot_spatial_mld\n",
-    "plot_spatial_mld(data, region=None, time = None, latS: float=None, latN: float=None, lonW: float=None,lonE: float=None, output= bool, output_dir=\"./figs\")\n",
+    "plot_spatial_mld(data, region=None, time = None, overlap = bolean latS: float=None, latN: float=None, lonW: float=None,lonE: float=None, output= bool, output_dir=\"./figs\")\n",
     "\n",
-    "    This function computes the mixed layer depth from monthly 3D ocean potential temperature and practical salinity, both for a model simulation and EN4 observations, and plots their climatology.\n",
+    "    This function computes the mixed layer depth from monthly 3D ocean potential temperature and practical salinity, both for a model simulation and EN4 observations, and plots their climatology. It allows the user to choose if climatologies\n",
+    "    are computed over the whole simulated and observed period, or over their overlap periods.\n",
     "    \n",
     "    It requires you to provide:\n",
     "    - A file with model data of 3D ocean potential temperature and practical salinity\n",
@@ -228,7 +231,7 @@
     }
    ],
    "source": [
-    "# To plot the climatological Labrador Sea stratification in January and DJF \n",
+    "# To plot the climatological Labrador Sea stratification in January and DJF we would use plot_stratification as shown below\n",
     "fn.plot_stratification(data, region= \"Labrador Sea\", time = \"February\",output= True, output_dir=\"./output\")\n",
     "fn.plot_stratification(data, region= \"Labrador Sea\", time = \"DJF\",output= True, output_dir=\"./output\")"
    ]
@@ -333,7 +336,8 @@
     }
    ],
    "source": [
-    "# To plot the climatological MLD in DJF in the Labrador and GIN Seas for the whole range of the Model and Obs datasets\n",
+    "# To plot the climatological MLD in march, fma or the whole year in the Labrador and GIN Seas in all cases \n",
+    "#  for the overlap period of the Model and Obs datasets we would call plot_spatial_mld_clim as shown below\n",
     "\n",
     "fn.plot_spatial_mld_clim(data, region= \"labrador_gin_seas\", time = \"mar\",overlap= True,output= True, output_dir=\"./output\")\n",
     "fn.plot_spatial_mld_clim(data, region= \"labrador_gin_seas\", time = \"fma\",overlap= True,output= True, output_dir=\"./output\")\n",
@@ -376,7 +380,7 @@
     }
    ],
    "source": [
-    "# This repeats the plots but now for the climatologies computed for the whole length of each dataset\n",
+    "# The example below shows how to plot the FMA climatologies for the whole length of each dataset\n",
     "fn.plot_spatial_mld_clim(data, region= \"labrador_gin_seas\", time = \"FMA\",output= True, output_dir=\"./output\")"
    ]
   },
@@ -418,7 +422,7 @@
     }
    ],
    "source": [
-    "# This example computes stratification in the Weddell Sea in the boreal winter\n",
+    "# The example is for computing stratification in the Weddell Sea in the boreal winter (JJA)\n",
     "fn.plot_stratification(data, region= \"weddell sea\",time = \"JJA\", output= True, output_dir=\"./output\")\n",
     "\n"
    ]
@@ -484,7 +488,7 @@
     }
    ],
    "source": [
-    "# This example plots MLD climatology in the southern ocean in the austral winter (JJA)\n",
+    "# This example plots MLD climatology in the southern ocean in the austral winter (JJA) over the overlap period of OBS/MODEL\n",
     "fn.plot_spatial_mld_clim(data, region= \"southern ocean\",time = \"JJA\",overlap= True, output= True, output_dir=\"./output\")\n"
    ]
   }
