Minor, but not final polishing

--- a/diagnostics/tropical_rainfall/notebooks/histogram_calculation_of_lowres.ipynb
+++ b/diagnostics/tropical_rainfall/notebooks/histogram_calculation_of_lowres.ipynb
@@ -61,7 +61,7 @@
     "\n",
     "|  | Low-resolution | High-resolution |\n",
     "| --- | --- | --- |\n",
-    "| name of function | histogram  | histogram_lowres |\n",
+    "| name of function | histogram_lowres  | histogram |\n",
     "| uniform binning | + | + |\n",
     "| non-uniform (log-spaced) binning | + | - |\n",
     "| lazy (or delayed) mode | + | - |\n",
