--- a/diagnostics/ocean_circulation/notebooks/ocean_circulation.ipynb
+++ b/diagnostics/ocean_circulation/notebooks/ocean_circulation.ipynb
@@ -135,7 +135,7 @@
    "metadata": {},
    "source": [
     "## Functions:\n",
-    "    All functions (primary and secondary) can be found in ocean_circulation_func\n",
+    "    All functions (primary and secondary) can be found in ocean_circulation\n",
     "\n",
     "    The two primary diagnostic functions are:\n",
     "\n",
