--- a/diagnostics/ecmean/notebook/comparison.ipynb
+++ b/diagnostics/ecmean/notebook/comparison.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "## Comparison of Performance Indices among experiments\n",
     "\n",
-    "This notebooks provide a minimum comparison for the Deliverable to provide an analysis of the Global PI of the NextGEMS runs"
+    "This notebooks provide a minimum comparison for the Deliverable to provide an analysis of the Global PI of the NextGEMS runs. Since it has some custom hard-coded directories, do not try to run it ypurself for now."
    ]
   },
   {
@@ -272,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
