--- a/diagnostics/global_time_series/notebooks/global_time_series.ipynb
+++ b/diagnostics/global_time_series/notebooks/global_time_series.ipynb
@@ -39,7 +39,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-11 15:28:46 :: Reader :: WARNING  -> lat is sorted in different way between area files and your dataset. Flipping it!\n"
+      "2023-07-11 17:25:57 :: Reader :: WARNING  -> lat is sorted in different way between area files and your dataset. Flipping it!\n"
      ]
     },
     {
@@ -85,7 +85,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-11 15:28:58 :: Reader :: WARNING  -> lat is sorted in different way between area files and your dataset. Flipping it!\n"
+      "2023-07-11 17:26:11 :: Reader :: WARNING  -> lat is sorted in different way between area files and your dataset. Flipping it!\n"
      ]
     },
     {
@@ -130,7 +130,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-11 15:29:25 :: Reader :: WARNING  -> lat is sorted in different way between area files and your dataset. Flipping it!\n"
+      "2023-07-11 17:26:36 :: Reader :: WARNING  -> lat is sorted in different way between area files and your dataset. Flipping it!\n"
      ]
     },
     {
@@ -147,8 +147,10 @@
    "source": [
     "sources = {\n",
     "    \"icon\": dict(model=\"ICON\", exp=\"ngc3028\", reader_kw={\"source\": \"P1D\", \"zoom\": 0}, plot_kw=dict(label=\"ICON\")),\n",
-    "    \"ifs-nemo\": dict(model=\"IFS\", exp=\"tco1279-orca025-cycle3\", reader_kw={\"source\": \"lra-r100-monthly\"}, plot_kw=dict(label=\"IFS\")),\n",
-    "    \"ifs-fesom\": dict(model=\"IFS\", exp=\"tco2559-ng5-cycle3\", reader_kw={\"source\": \"lra-r100-monthly\"}, plot_kw=dict(label=\"IFS\"), plot_era5=True),\n",
+    "    \"ifs-nemo\": dict(model=\"IFS\", exp=\"tco1279-orca025-cycle3\", reader_kw={\"source\": \"lra-r100-monthly\"},\n",
+    "                     plot_kw=dict(label=\"IFS\")),\n",
+    "    \"ifs-fesom\": dict(model=\"IFS\", exp=\"tco2559-ng5-cycle3\", reader_kw={\"source\": \"lra-r100-monthly\"},\n",
+    "                      plot_kw=dict(label=\"IFS\"), plot_era5=True),\n",
     "}\n",
     "                 \n",
     "for src_config in sources.values():\n",
@@ -212,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
