changed imports of functions

--- a/diagnostics/atmglobalmean/notebooks/agm_ng3_mean_plots.ipynb
+++ b/diagnostics/atmglobalmean/notebooks/agm_ng3_mean_plots.ipynb
@@ -25,7 +25,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FDB5 binary library not present on system, disabling FDB support.\n",
       "env: PATH=/sw/spack-levante/texlive-live2021-l5o6sw/bin/x86_64-linux:/sw/spack-levante/texlive-live2021-l5o6sw/bin:/sw/spack-levante/git-lfs-2.11.0-oihcwo/bin:/sw/spack-levante/git-2.31.1-25ve7r/bin:/sw/spack-levante/jupyterhub/jupyterhub/bin:/sw/spack-workplace/spack/bin:/usr/share/Modules/bin:/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/home/b/b382257/.conda/envs/aqua/bin/\n"
      ]
     }
@@ -38,7 +37,7 @@
     "parent_directory = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
     "sys.path.append(parent_directory)\n",
     "\n",
-    "from atm_global_mean import AGM_diag"
+    "from atm_global_mean import plot_map_with_stats"
    ]
   },
   {
@@ -67,7 +66,23 @@
    "execution_count": 3,
    "id": "fee9e437-64b0-4aca-b955-860bac491c65",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/b/b382257/.conda/envs/aqua/lib/python3.10/site-packages/xarray/core/indexing.py:1443: PerformanceWarning: Slicing is producing a large chunk. To accept the large\n",
+      "chunk and silence this warning, set the option\n",
+      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': False}):\n",
+      "    ...     array[indexer]\n",
+      "\n",
+      "To avoid creating the large chunks, set the option\n",
+      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': True}):\n",
+      "    ...     array[indexer]\n",
+      "  return self.array[key]\n"
+     ]
+    }
+   ],
    "source": [
     "reader_era5 = Reader(model=\"ERA5\", exp=\"era5\", source=\"monthly\")\n",
     "data_era5 = reader_era5.retrieve(fix=True)\n",
@@ -92,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "32ca0934-115e-4c55-9371-5e571f72d84e",
    "metadata": {},
    "outputs": [
@@ -128,14 +143,14 @@
     }
    ],
    "source": [
-    "AGM_diag.plot_map_with_stats(data_tco2559, '2t',  slice('2020-01-01', '2024-12-31'), model_label='IFS 4.4 km')\n",
-    "AGM_diag.plot_map_with_stats(data_tco1279, '2t', slice('2020-01-01', '2024-12-31'), model_label='IFS 9 km')\n",
-    "AGM_diag.plot_map_with_stats(data_icon, '2t', slice('2020-01-01', '2024-12-31'), model_label='ICON 5 km')"
+    "plot_map_with_stats(data_tco2559, '2t',  slice('2020-01-01', '2024-12-31'), model_label='IFS 4.4 km')\n",
+    "plot_map_with_stats(data_tco1279, '2t', slice('2020-01-01', '2024-12-31'), model_label='IFS 9 km')\n",
+    "plot_map_with_stats(data_icon, '2t', slice('2020-01-01', '2024-12-31'), model_label='ICON 5 km')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "297650e0-ab0a-4703-9ebf-1a8950c07a7c",
    "metadata": {},
    "outputs": [
@@ -161,14 +176,13 @@
     }
    ],
    "source": [
-    "AGM_diag.plot_map_with_stats(data_tco2559, 'msl', slice('2020-01-01', '2024-12-31'), model_label='IFS 4.4 km')\n",
-    "AGM_diag.plot_map_with_stats(data_tco1279, 'msl',slice('2020-01-01', '2024-12-31'), model_label='IFS 9 km')\n",
-    "#AGM_diag.plot_map_with_stats(data_icon, 'msl', slice('2020-01-01', '2024-12-31'), model_label='ICON 5 km')"
+    "plot_map_with_stats(data_tco2559, 'msl', slice('2020-01-01', '2024-12-31'), model_label='IFS 4.4 km')\n",
+    "plot_map_with_stats(data_tco1279, 'msl',slice('2020-01-01', '2024-12-31'), model_label='IFS 9 km')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "53b34918-83d1-4f5d-ae89-9317b3ea7128",
    "metadata": {},
    "outputs": [
@@ -204,9 +218,9 @@
     }
    ],
    "source": [
-    "AGM_diag.plot_map_with_stats(data_tco2559, 'tprate', slice('2020-01-01', '2024-12-31'), model_label='IFS 4.4 km')\n",
-    "AGM_diag.plot_map_with_stats(data_tco1279, 'tprate',slice('2020-01-01', '2024-12-31'), model_label='IFS 9 km')\n",
-    "AGM_diag.plot_map_with_stats(data_icon, 'tprate', slice('2020-01-01', '2024-12-31'), model_label='ICON 5 km')"
+    "plot_map_with_stats(data_tco2559, 'tprate', slice('2020-01-01', '2024-12-31'), model_label='IFS 4.4 km')\n",
+    "plot_map_with_stats(data_tco1279, 'tprate',slice('2020-01-01', '2024-12-31'), model_label='IFS 9 km')\n",
+    "plot_map_with_stats(data_icon, 'tprate', slice('2020-01-01', '2024-12-31'), model_label='ICON 5 km')"
    ]
   },
   {
