different output, filenaming, figure sizes for radiation

--- a/diagnostics/radiation/notebooks/time_series.ipynb
+++ b/diagnostics/radiation/notebooks/time_series.ipynb
@@ -147,7 +147,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Plot has been saved to ./output/figs.\n"
+      "Data has been saved to ./output/data/.\n",
+      "Plot has been saved to ./output/figs/.\n"
      ]
     }
    ],
