--- a/diagnostics/radiation/notebooks/gregory.ipynb
+++ b/diagnostics/radiation/notebooks/gregory.ipynb
@@ -42,7 +42,7 @@
     "parent_directory = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
     "sys.path.append(parent_directory)\n",
     "from functions import process_ceres_data, process_model_data, process_era5_data, process_ceres_sfc_data\n",
-    "from functions import gregory_plot, barplot_model_data, plot_model_comparison_timeseries, plot_bias, plot_maps"
+    "from functions import gregory_plot"
    ]
   },
   {
@@ -135,7 +135,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-10 17:08:34 :: Reader :: WARNING  -> lat is sorted in different way between area files and your dataset. Flipping it!\n"
+      "2023-07-12 11:46:06 :: Reader :: WARNING  -> lat is sorted in different way between area files and your dataset. Flipping it!\n"
      ]
     },
     {
@@ -152,8 +152,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Plot has been saved to ./output/figs.\n"
+      "Data has been saved to ./output/data/.\n",
+      "Plot has been saved to ./output/figs/.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -174,7 +184,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-10 17:09:03 :: Reader :: WARNING  -> lat is sorted in different way between area files and your dataset. Flipping it!\n"
+      "2023-07-12 11:46:46 :: Reader :: WARNING  -> lat is sorted in different way between area files and your dataset. Flipping it!\n"
      ]
     },
     {
@@ -191,8 +201,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Plot has been saved to ./output/figs.\n"
+      "Data has been saved to ./output/data/.\n",
+      "Plot has been saved to ./output/figs/.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -205,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "e38764d5-99db-44d6-9d91-8403a8d8f5e1",
    "metadata": {},
    "outputs": [
@@ -213,7 +233,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-10 17:09:25 :: Reader :: WARNING  -> lat is sorted in different way between area files and your dataset. Flipping it!\n",
+      "2023-07-12 11:47:44 :: Reader :: WARNING  -> lat is sorted in different way between area files and your dataset. Flipping it!\n",
       "/home/b/b382257/.conda/envs/aqua/lib/python3.10/site-packages/xarray/core/indexing.py:1443: PerformanceWarning: Slicing is producing a large chunk. To accept the large\n",
       "chunk and silence this warning, set the option\n",
       "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': False}):\n",
@@ -234,13 +254,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Plot has been saved to ./output/figs.\n"
-     ]
     }
    ],
    "source": [
