fixed issues: comparing climatologies in seasonal plots, plot_map_with_stats() update and init file update

--- a/diagnostics/atmglobalmean/notebooks/agm_ng3_plev_test.ipynb
+++ b/diagnostics/atmglobalmean/notebooks/agm_ng3_plev_test.ipynb
@@ -5,7 +5,7 @@
    "id": "39f85800-14d6-42c5-a2e3-d679e8b5232f",
    "metadata": {},
    "source": [
-    "## Using the AGM_diag class to analyse nextGEMS cycle 3 data\n",
+    "## Creating zonal bias plots using nextGEMS cycle 3 data\n",
     "\n",
     "The data analized here are:\n",
     "- tco1279-orca025 (5 years)\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "e35118e7-2df5-4e84-928f-283e205abae9",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "env: PATH=/sw/spack-levante/texlive-live2021-l5o6sw/bin/x86_64-linux:/sw/spack-levante/texlive-live2021-l5o6sw/bin:/sw/spack-levante/git-lfs-2.11.0-oihcwo/bin:/sw/spack-levante/git-2.31.1-25ve7r/bin:/sw/spack-levante/jupyterhub/jupyterhub/bin:/sw/spack-workplace/spack/bin:/usr/share/Modules/bin:/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/home/b/b382257/.conda/envs/aqua/bin/\n"
+      "env: PATH=/sw/spack-levante/texlive-live2021-l5o6sw/bin/x86_64-linux:/sw/spack-levante/texlive-live2021-l5o6sw/bin:/sw/spack-levante/git-lfs-2.11.0-oihcwo/bin:/sw/spack-levante/git-2.31.1-25ve7r/bin:/sw/spack-levante/jupyterhub/jupyterhub/bin:/sw/spack-workplace/spack/bin:/usr/share/Modules/bin:/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/home/b/b382257/.conda/envs/aqua/bin/:/home/b/b382257/.conda/envs/aqua/bin/\n"
      ]
     }
    ],
@@ -35,10 +35,10 @@
     "import os\n",
     "import sys\n",
     "%env PATH={os.environ[\"PATH\"]}:{sys.exec_prefix}/bin/\n",
-    "parent_directory = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
+    "parent_directory = os.path.abspath(os.path.join(os.getcwd(), '../..'))\n",
     "sys.path.append(parent_directory)\n",
     "\n",
-    "from atm_global_mean import compare_datasets_plev"
+    "from atmglobalmean import compare_datasets_plev"
    ]
   },
   {
