The notebooks are updated

--- a/diagnostics/tropical_rainfall/notebooks/comparison_of_lowres_models.ipynb
+++ b/diagnostics/tropical_rainfall/notebooks/comparison_of_lowres_models.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,30 +254,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "140400 data size after preprocessing\n",
-      "140400 sum of counts\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-13 00:59:27 :: create_folder :: WARNING  -> Folder /work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/histograms/ already exists\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The difference between the mean of the data and the mean of the histogram is 0.2649%\n",
-      "The mean of the data is 5.7547094849491484e-05 and the mean of the histogram is 5.599519230769231e-05kg m**-2 s**-1.\n"
+      "2023-07-13 04:37:30 :: Trop. Rainfall :: INFO     -> Histogram of the data is created\n",
+      "2023-07-13 04:37:30 :: Trop. Rainfall :: DEBUG    -> Size of data after preprocessing/Sum of Counts: 140400/140400\n",
+      "2023-07-13 04:37:30 :: Trop. Rainfall :: DEBUG    -> The difference between the mean of the data and the mean of the histogram: 0.2649%\n",
+      "2023-07-13 04:37:30 :: Trop. Rainfall :: DEBUG    -> The mean of the data: 5.7547094849491484e-05kg m**-2 s**-1\n",
+      "2023-07-13 04:37:30 :: Trop. Rainfall :: DEBUG    -> The mean of the histogram: 5.599519230769231e-05kg m**-2 s**-1\n",
+      "2023-07-13 04:37:31 :: create_folder :: WARNING  -> Folder /work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/histograms/ already exists\n"
      ]
     }
    ],
@@ -287,30 +276,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "648000 data size after preprocessing\n",
-      "648000 sum of counts\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-13 00:59:29 :: create_folder :: WARNING  -> Folder /work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/histograms/ already exists\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The difference between the mean of the data and the mean of the histogram is 0.1337%\n",
-      "The mean of the data is 5.744894515420286e-05 and the mean of the histogram is 5.752562692901234e-05kg m**-2 s**-1.\n"
+      "2023-07-13 04:37:31 :: Trop. Rainfall :: INFO     -> Histogram of the data is created\n",
+      "2023-07-13 04:37:31 :: Trop. Rainfall :: DEBUG    -> Size of data after preprocessing/Sum of Counts: 648000/648000\n",
+      "2023-07-13 04:37:31 :: Trop. Rainfall :: DEBUG    -> The difference between the mean of the data and the mean of the histogram: 0.1337%\n",
+      "2023-07-13 04:37:31 :: Trop. Rainfall :: DEBUG    -> The mean of the data: 5.744894515420286e-05kg m**-2 s**-1\n",
+      "2023-07-13 04:37:31 :: Trop. Rainfall :: DEBUG    -> The mean of the histogram: 5.752562692901234e-05kg m**-2 s**-1\n",
+      "2023-07-13 04:37:31 :: create_folder :: WARNING  -> Folder /work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/histograms/ already exists\n"
      ]
     }
    ],
@@ -320,30 +298,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5421600 data size after preprocessing\n",
-      "5421600 sum of counts\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-13 01:00:09 :: create_folder :: WARNING  -> Folder /work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/histograms/ already exists\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The difference between the mean of the data and the mean of the histogram is nan%\n",
-      "The mean of the data is nan and the mean of the histogram is 5.289405168677144e-05kg m**-2 s**-1.\n"
+      "2023-07-13 04:37:56 :: Trop. Rainfall :: INFO     -> Histogram of the data is created\n",
+      "2023-07-13 04:37:56 :: Trop. Rainfall :: DEBUG    -> Size of data after preprocessing/Sum of Counts: 5421600/5421600\n",
+      "2023-07-13 04:38:56 :: Trop. Rainfall :: DEBUG    -> The difference between the mean of the data and the mean of the histogram: nan%\n",
+      "2023-07-13 04:38:56 :: Trop. Rainfall :: DEBUG    -> The mean of the data: nankg m**-2 s**-1\n",
+      "2023-07-13 04:38:56 :: Trop. Rainfall :: DEBUG    -> The mean of the histogram: 5.289405168677144e-05kg m**-2 s**-1\n",
+      "2023-07-13 04:38:56 :: create_folder :: WARNING  -> Folder /work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/histograms/ already exists\n"
      ]
     }
    ],
@@ -501,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
