Plots and plotting functions are updated

--- a/diagnostics/tropical_rainfall/notebooks/histogram_calculations_of_highres.ipynb
+++ b/diagnostics/tropical_rainfall/notebooks/histogram_calculations_of_highres.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,6 +85,35 @@
     "from aqua import Reader\n",
     "sys.path.insert(0, '../../')\n",
     "from tropical_rainfall import Tropical_Rainfall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from aqua.slurm import slurm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('251.3671875 GB', '8:00:00', '256', '8', '16', '2')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "slurm.max_resources_per_node(queue='compute')"
    ]
   },
   {
@@ -341,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,21 +379,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-13 13:21:30 :: create_folder :: WARNING  -> Folder ./slurm already exists\n",
-      "2023-07-13 13:21:30 :: create_folder :: WARNING  -> Folder ./slurm/logs already exists\n",
-      "2023-07-13 13:21:30 :: create_folder :: WARNING  -> Folder ./slurm/output already exists\n",
+      "2023-07-14 06:19:01 :: create_folder :: WARNING  -> Folder ./slurm already exists\n",
+      "2023-07-14 06:19:01 :: create_folder :: WARNING  -> Folder ./slurm/logs already exists\n",
+      "2023-07-14 06:19:01 :: create_folder :: WARNING  -> Folder ./slurm/output already exists\n",
       "/work/bb1153/b382267/mamba_dir/mambaforge/envs/aqua/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
       "Perhaps you already have a cluster running?\n",
-      "Hosting the HTTP server on port 41173 instead\n",
+      "Hosting the HTTP server on port 39005 instead\n",
       "  warnings.warn(\n",
-      "2023-07-13 13:21:39 :: slurm :: WARNING  -> #!/usr/bin/env bash\n",
+      "2023-07-14 06:19:01 :: slurm :: WARNING  -> #!/usr/bin/env bash\n",
       "\n",
       "#SBATCH -J dask-worker\n",
       "#SBATCH -p compute\n",
@@ -376,7 +405,7 @@
       "#SBATCH --error=./slurm/logs/dask-worker-%j.err\n",
       "#SBATCH --output=./slurm/output/dask-worker-%j.out\n",
       "\n",
-      "/work/bb1153/b382267/mamba_dir/mambaforge/envs/aqua/bin/python -m distributed.cli.dask_worker tcp://136.172.124.2:33205 --nthreads 4 --nworkers 4 --memory-limit 58.21GiB --name dummy-name --nanny --death-timeout 60\n",
+      "/work/bb1153/b382267/mamba_dir/mambaforge/envs/aqua/bin/python -m distributed.cli.dask_worker tcp://136.172.124.1:33125 --nthreads 4 --nworkers 4 --memory-limit 58.21GiB --name dummy-name --nanny --death-timeout 60\n",
       "\n"
      ]
     }
@@ -395,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -403,9 +432,9 @@
      "output_type": "stream",
      "text": [
       "JOBID      CPUS  NODES ST         NAME                 TIME       START_TIME           DEPENDENCY           PARTITION            MIN_MEMORY          \n",
-      "5974073    16    1     PD         dask-worker          0:00       N/A                  (null)               compute              233G                \n",
-      "5974072    16    1     PD         dask-worker          0:00       N/A                  (null)               compute              233G                \n",
-      "5974066    16    1     PD         dask-worker          0:00       N/A                  (null)               compute              233G                \n"
+      "5988769    256   1     CG         dask-worker          5:53       2023-07-14T06:12:53  (null)               compute              233G                \n",
+      "5988858    16    1     PD         dask-worker          0:00       N/A                  (null)               compute              233G                \n",
+      "5987446    256   1     R          ifs                  2:33:27    2023-07-14T03:45:39  (null)               compute              500G                \n"
      ]
     },
     {
@@ -414,7 +443,7 @@
        "0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,18 +959,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "diag = Tropical_Rainfall(trop_lat=15,  num_of_bins = 1000, first_edge = 0, width_of_bin = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:asyncio:Task exception was never retrieved\n",
+      "future: <Task finished name='Task-2325133' coro=<Client._gather.<locals>.wait() done, defined at /work/bb1153/b382267/mamba_dir/mambaforge/envs/aqua/lib/python3.10/site-packages/distributed/client.py:2196> exception=AllExit()>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/work/bb1153/b382267/mamba_dir/mambaforge/envs/aqua/lib/python3.10/site-packages/distributed/client.py\", line 2205, in wait\n",
+      "    raise AllExit()\n",
+      "distributed.client.AllExit\n",
+      "/work/bb1153/b382267/AQUA/aqua/reader/reader.py:380: PerformanceWarning: Reshaping is producing a large chunk. To accept the large\n",
+      "chunk and silence this warning, set the option\n",
+      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': False}):\n",
+      "    ...     array.reshape(shape)\n",
+      "\n",
+      "To avoid creating the large chunks, set the option\n",
+      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': True}):\n",
+      "    ...     array.reshape(shape)Explictly passing ``limit`` to ``reshape`` will also silence this warning\n",
+      "    >>> array.reshape(shape, limit='128 MiB')\n",
+      "  out.append(self.regridder[vc].regrid(dd))\n",
+      "2023-07-14 06:29:09 :: Trop. Rainfall :: WARNING  -> Amount of counts in the histogram is not equal to the size of the data\n",
+      "2023-07-14 06:29:09 :: Trop. Rainfall :: WARNING  -> Check the data and the bins\n",
+      "2023-07-14 06:48:30 :: create_folder :: WARNING  -> Folder /work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/histograms/PT3H/ already exists\n",
+      "/work/bb1153/b382267/AQUA/aqua/reader/reader.py:380: PerformanceWarning: Reshaping is producing a large chunk. To accept the large\n",
+      "chunk and silence this warning, set the option\n",
+      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': False}):\n",
+      "    ...     array.reshape(shape)\n",
+      "\n",
+      "To avoid creating the large chunks, set the option\n",
+      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': True}):\n",
+      "    ...     array.reshape(shape)Explictly passing ``limit`` to ``reshape`` will also silence this warning\n",
+      "    >>> array.reshape(shape, limit='128 MiB')\n",
+      "  out.append(self.regridder[vc].regrid(dd))\n",
+      "2023-07-14 06:54:15 :: Trop. Rainfall :: WARNING  -> Amount of counts in the histogram is not equal to the size of the data\n",
+      "2023-07-14 06:54:15 :: Trop. Rainfall :: WARNING  -> Check the data and the bins\n"
+     ]
+    }
+   ],
+   "source": [
     "reader = Reader(model=\"ICON\", exp=\"ngc3028\", source=\"PT3H\", zoom=10,  regrid=\"r010\")\n",
     "data_icon3028_retrieved = reader.retrieve()\n",
-    "data_icon3028_retrieved.time\n",
+    "#data_icon3028_retrieved.time\n",
     "\n",
-    "for year in range(2020, 2026):\n",
-    "    for x in range(7, 12):\n",
+    "path_to_netcdf =\"/work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/histograms/PT3H/\"\n",
+    "\n",
+    "for year in range(2021, 2026):\n",
+    "    for x in range(1, 6, 2):\n",
     "        data_icon3028 = data_icon3028_retrieved.sel(time=slice(str(year)+'-'+str(x), str(year)+'-'+str(x+1)))\n",
     "        #data_icon3028 = reader.timmean(data_icon3028, freq=\"3H\")\n",
+    "        data_icon3028 = data_icon3028['tprate'][:]*86400\n",
     "        data_icon3028 = reader.regrid(data_icon3028)\n",
     "        diag.histogram(data_icon3028, path_to_histogram=path_to_netcdf, \n",
     "                     name_of_file=\"icon3028_tco1279_PT3H_r010_3h\")"
