Make output folder configurable by user; silent unnecessary warnings upon creation of folder

--- a/diagnostics/seaice/notebooks/seaice.ipynb
+++ b/diagnostics/seaice/notebooks/seaice.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -106,41 +106,7 @@
       "To avoid creating the large chunks, set the option\n",
       "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': True}):\n",
       "    ...     array[indexer]\n",
-      "  return self.array[key]\n",
-      "2023-07-14 09:28:33 :: create_folder :: WARNING  -> Folder ./PDF/png/ already exists\n",
-      "2023-07-14 09:28:35 :: create_folder :: WARNING  -> Folder ./PDF/pdf/ already exists\n",
-      "2023-07-14 09:28:35 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:28:38 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:28:41 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:28:45 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:28:51 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:28:58 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:29:07 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:29:17 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:29:28 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:29:28 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:29:28 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:29:28 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:29:28 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:29:28 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:29:28 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:29:28 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:29:28 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:29:29 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:29:29 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:29:29 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:29:30 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:29:30 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:29:31 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:29:32 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:29:32 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:29:33 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:29:33 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:29:34 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:29:34 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:29:35 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:29:35 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n",
-      "2023-07-14 09:29:36 :: create_folder :: WARNING  -> Folder ./NetCDF/ already exists\n"
+      "  return self.array[key]\n"
      ]
     },
     {
@@ -290,9 +256,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "aqua",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "aqua"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
