correct import for teleconnections

--- a/diagnostics/teleconnections/notebooks/NAO.ipynb
+++ b/diagnostics/teleconnections/notebooks/NAO.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from teleconnections.tc_class import Teleconnection"
+    "from teleconnections import Teleconnection"
    ]
   },
   {
@@ -95,12 +95,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-08 17:37:38 :: Teleconnection :: WARNING  -> No regridding will be performed\n",
-      "2023-07-08 17:37:38 :: Teleconnection :: INFO     -> Be sure that the data is already regridded\n",
-      "2023-07-08 17:37:38 :: Teleconnection :: WARNING  -> No time aggregation will be performed\n",
-      "2023-07-08 17:37:38 :: Teleconnection :: INFO     -> Be sure that the data is already monthly aggregated\n",
-      "2023-07-08 17:37:38 :: Teleconnection :: INFO     -> Namelist loaded\n",
-      "2023-07-08 17:37:42 :: Teleconnection :: INFO     -> Reader initialized\n"
+      "2023-07-15 14:17:41 :: Teleconnection :: WARNING  -> No regridding will be performed\n",
+      "2023-07-15 14:17:41 :: Teleconnection :: INFO     -> Be sure that the data is already regridded\n",
+      "2023-07-15 14:17:41 :: Teleconnection :: WARNING  -> No time aggregation will be performed\n",
+      "2023-07-15 14:17:41 :: Teleconnection :: INFO     -> Be sure that the data is already monthly aggregated\n",
+      "2023-07-15 14:17:41 :: Teleconnection :: INFO     -> Be sure that the data is already regridded\n",
+      "2023-07-15 14:17:41 :: Teleconnection :: WARNING  -> No time aggregation will be performed\n",
+      "2023-07-15 14:17:41 :: Teleconnection :: INFO     -> Be sure that the data is already monthly aggregated\n",
+      "2023-07-15 14:17:41 :: Teleconnection :: INFO     -> Namelist loaded\n",
+      "2023-07-15 14:17:57 :: Teleconnection :: INFO     -> Reader initialized\n"
      ]
     }
    ],
