--- a/diagnostics/teleconnections/notebooks/NAO_cycle3.ipynb
+++ b/diagnostics/teleconnections/notebooks/NAO_cycle3.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "import xarray as xr\n",
     "\n",
-    "from teleconnections.plots import maps_plot"
+    "from teleconnections import maps_plot"
    ]
   },
   {
