--- a/diagnostics/teleconnections/notebooks/ENSO.ipynb
+++ b/diagnostics/teleconnections/notebooks/ENSO.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from teleconnections.tc_class import Teleconnection"
+    "from teleconnections import Teleconnection"
    ]
   },
   {
@@ -96,17 +96,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-08 17:27:57 :: Teleconnection :: DEBUG    -> Open dataset: ERA5/era5/monthly\n",
-      "2023-07-08 17:27:57 :: Teleconnection :: WARNING  -> No regridding will be performed\n",
-      "2023-07-08 17:27:57 :: Teleconnection :: INFO     -> Be sure that the data is already regridded\n",
-      "2023-07-08 17:27:57 :: Teleconnection :: DEBUG    -> Regridding resolution: None\n",
-      "2023-07-08 17:27:57 :: Teleconnection :: WARNING  -> No time aggregation will be performed\n",
-      "2023-07-08 17:27:57 :: Teleconnection :: INFO     -> Be sure that the data is already monthly aggregated\n",
-      "2023-07-08 17:27:57 :: Teleconnection :: DEBUG    -> Frequency: None\n",
-      "2023-07-08 17:27:57 :: Teleconnection :: INFO     -> Namelist loaded\n",
-      "2023-07-08 17:27:57 :: Teleconnection :: DEBUG    -> Teleconnection variable: sst\n",
-      "2023-07-08 17:27:57 :: Teleconnection :: DEBUG    -> Teleconnection type: region\n",
-      "2023-07-08 17:27:58 :: Teleconnection :: INFO     -> Reader initialized\n"
+      "2023-07-15 14:16:08 :: Teleconnection :: WARNING  -> No regridding will be performed\n",
+      "2023-07-15 14:16:08 :: Teleconnection :: INFO     -> Be sure that the data is already regridded\n",
+      "2023-07-15 14:16:08 :: Teleconnection :: WARNING  -> No time aggregation will be performed\n",
+      "2023-07-15 14:16:08 :: Teleconnection :: INFO     -> Be sure that the data is already monthly aggregated\n",
+      "2023-07-15 14:16:08 :: Teleconnection :: INFO     -> Be sure that the data is already regridded\n",
+      "2023-07-15 14:16:08 :: Teleconnection :: WARNING  -> No time aggregation will be performed\n",
+      "2023-07-15 14:16:08 :: Teleconnection :: INFO     -> Be sure that the data is already monthly aggregated\n",
+      "2023-07-15 14:16:08 :: Teleconnection :: INFO     -> Namelist loaded\n",
+      "2023-07-15 14:16:10 :: Teleconnection :: INFO     -> Reader initialized\n"
      ]
     }
    ],
