--- a/diagnostics/ocean3d/notebooks/ocean_drifts.ipynb
+++ b/diagnostics/ocean3d/notebooks/ocean_drifts.ipynb
@@ -13,42 +13,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### PATH to import function\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "# print(os.getcwd())\n",
-    "\n",
-    "os.chdir(\"..\")\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Import Modules"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.insert(0, '../..')\n",
+    "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "from aqua import Reader,catalogue, inspect_catalogue\n",
-    "from ocean_drifts import hovmoller_lev_time_plot\n",
-    "from ocean_drifts import time_series_multilevs\n",
-    "from ocean_drifts import multilevel_t_s_trend_plot\n",
-    "from ocean_drifts import zonal_mean_trend_plot\n",
+    "from ocean3d import hovmoller_lev_time_plot\n",
+    "from ocean3d import time_series_multilevs\n",
+    "from ocean3d import multilevel_t_s_trend_plot\n",
+    "from ocean3d import zonal_mean_trend_plot\n",
     "from aqua.util import load_yaml"
    ]
   },
