fix to reader to trigger tests

--- a/notebooks/reader/main.ipynb
+++ b/notebooks/reader/main.ipynb
@@ -5897,8 +5897,8 @@
     }
    ],
    "source": [
-    "reader = Reader(model=\"FESOM\", exp=\"tco2559-ng5\", source=\"lra-r100-monthly\")\n",
-    "data = reader.retrieve(fix=False)\n",
+    "reader = Reader(model=\"FESOM\", exp=\"tco2559-ng5\", source=\"lra-r100-monthly\", fix=False)\n",
+    "data = reader.retrieve()\n",
     "data"
    ]
   },
